hphp/hack/test/ifc/check/darray.php.exp
=== IFC analysis results for darray.php
File "darray.php", line 36, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "darray.php", line 13, characters 28-36:
  This may be the data source with policy `PRIVATE`
  File "darray.php", line 5, characters 14-24:
  This may be the data sink with policy `PUBLIC`
File "darray.php", line 53, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "darray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "darray.php", line 11, characters 28-35:
  This may be the data sink with policy `PUBLIC`
File "darray.php", line 47, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "darray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "darray.php", line 11, characters 28-35:
  This may be the data sink with policy `PUBLIC`
File "darray.php", line 19, characters 5-50:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "darray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "darray.php", line 11, characters 28-35:
  This may be the data sink with policy `PUBLIC`
File "darray.php", line 25, characters 5-50:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "darray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "darray.php", line 11, characters 28-35:
  This may be the data sink with policy `PUBLIC`
